--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </div>
 
   <footer class="site-footer">
-    <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
+    <p>&copy; 2023 Fake Adoption Center. All rights reserved!!!</p>
   </footer>
 
 </body>
