fixed footer text after confict merge

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
   <title>Pet Adoption Center</title>
-=======
-  <title>Pet Adoption Center12345</title>
->>>>>>> e391cf485f9b4ccb62afee28599829defb9faccc
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
@@ -154,7 +150,7 @@
   </div>
 
   <footer class="site-footer">
-    <p>&copy; 2023 Fake Adoption Center. All rights reserved!!!</p>
+    <p>&copy; 2023 Fake Adoption Center. All rights reserved</p>
   </footer>
 
 </body>
