--- a/index.html
+++ b/index.html
@@ -99,53 +99,20 @@
         <p>Show me: <button>All Pets</button> <button>Only Dogs</button> <button>Only Cats</button></p>
       </div>
 
-      <div class="list-of-pets">
+      <div class="list-of-pets"></div>
+
+      <template id="pet-card-template">
         <div class="pet-card">
           <div class="pet-card-text">
-            <h3>Barksalot</h3>
-            <p class="pet-description">Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots,
-              celery, and playing fetch. </p>
+            <h3></h3>
+            <p class="pet-description"></p>
             <p class="pet-age">2 years old</p>
           </div>
           <div class="pet-card-photo">
             <img src="images/Barksalot.jpg" alt="">
           </div>
-        </div> <!-- end of pet card -->
-        <div class="pet-card">
-          <div class="pet-card-text">
-            <h3>Meowsalot</h3>
-            <p class="pet-description">Meowsalot is the most talkative cat we’ve ever come across. Constant meowing,
-              chirping and purring!</p>
-            <p class="pet-age">One year old</p>
-          </div>
-          <div class="pet-card-photo">
-            <img src="images/Meowsalot.jpg" alt="">
-          </div>
-        </div> <!-- end of pet card -->
-        <div class="pet-card">
-          <div class="pet-card-text">
-            <h3>Woof</h3>
-            <p class="pet-description">Woof is a very talkative and sweet pup. She loves beets, plums, cuddles and
-              jumping over low fences.</p>
-            <p class="pet-age">Less than a year old</p>
-          </div>
-          <div class="pet-card-photo">
-            <img src="images/Woof.jpg" alt="">
-          </div>
-        </div> <!-- end of pet card -->
-        <div class="pet-card">
-          <div class="pet-card-text">
-            <h3>Purrsloud</h3>
-            <p class="pet-description">Purrsloud has the loudest and most relaxing purr that’s come through our center.
-              Come hear it yourself.</p>
-            <p class="pet-age">4 years old</p>
-          </div>
-          <div class="pet-card-photo">
-            <img src="images/Purrsloud.jpg" alt="">
-          </div>
-        </div> <!-- end of pet card -->
-
-      </div>
+        </div>
+      </template>
 
     </div>
 
