Nearly finished pet card feature.

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
           <div class="pet-card-text">
             <h3></h3>
             <p class="pet-description"></p>
-            <p class="pet-age">2 years old</p>
+            <p class="pet-age"></p>
           </div>
           <div class="pet-card-photo">
-            <img src="images/Barksalot.jpg" alt="">
+            <img src="" alt="">
           </div>
         </div>
       </template>
