--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     <div class="page-section-inner">
       <h2 class="page-section-title">Meet Our Friends</h2>
       <div class="pet-filter">
-        <p>Show me: <button class="active" data-filter="all">All Pets</button> <button data-filter="dog">Only
-            Dogs</button> <button data-filter="cat">Only Cats</button></p>
+        <p>Show me: <button class="active" data-filter="all">All Pets</button>
+          <button data-filter="dog">Only Dogs</button> <button data-filter="cat">Only Cats</button>
+        </p>
       </div>
 
       <div class="list-of-pets"></div>
